Add -XX:MaxPermSize=256m in shell profile