@@ -503,10 +503,10 @@
                <groupId>org.exoplatform.kernel</groupId>
                <artifactId>exo.kernel.commons</artifactId>
             </dependency>
-            <dependency>
+            <!-- dependency>
                <groupId>org.exoplatform.portal</groupId>
                <artifactId>exo.portal.gadgets-core</artifactId>
-            </dependency>
+            </dependency-->
             <dependency>
                <groupId>org.exoplatform.kernel</groupId>
                <artifactId>exo.kernel.container</artifactId>
@@ -687,7 +687,7 @@
                      <hostedWebapp>${basedir}/target/war</hostedWebapp>
                      <skipTests>${gwt.test.skip}</skipTests>
                      <port>${gwt.port}</port>
-                     <extraJvmArgs>-Xmx1024m</extraJvmArgs>
+                     <extraJvmArgs>-Xmx2048m -XX:MaxPermSize=256m</extraJvmArgs>
                   </configuration>
                </plugin>
                <plugin>
